--- a/design/templates/OpenGame/fleet_javascript.tpl.html
+++ b/design/templates/OpenGame/fleet_javascript.tpl.html
@@ -1,3 +1,6 @@
+<script type="text/javascript"><!--
+  var UNIVERSE_GALAXY_DISTANCE = {C_uni_galaxy_distance};
+--></script>
 <script type="text/javascript" src="js/fleet.js?{C_var_db_update}"></script>
 <script type="text/javascript"><!--
 var fleets = Array();
@@ -8,8 +11,8 @@ var fleets = Array();
     <!-- END ships -->
   ], ['{fleets.METAL}', '{fleets.CRYSTAL}', '{fleets.DEUTERIUM}']];
 <!-- END fleets -->
-var res_names = ['{L_sys_metal}', '{L_sys_crystal}', '{L_sys_deuterium}'];
-jQuery.extend(language, {sys_fleet_composition: '{L_sys_fleet_composition}', sys_ships: '{L_sys_ships}', sys_resources: '{L_sys_resources}', sys_capacity: '{L_sys_capacity}'});
+var res_names = ['{LA_sys_metal}', '{LA_sys_crystal}', '{LA_sys_deuterium}'];
+jQuery.extend(language, {sys_fleet_composition: '{LA_sys_fleet_composition}', sys_ships: '{LA_sys_ships}', sys_resources: '{LA_sys_resources}', sys_capacity: '{LA_sys_capacity}'});
 
 var SHIP_SPY = {D_SHIP_SPY};
 
