--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -147,11 +147,10 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 }
 
 #left_menu_show {
-/*  position: fixed;*/
-/*  float: left;*/
-  left: 0;
-  top: 0;
-  width: 140px;
+  /*left: 0;*/
+  /*top: 0;*/
+  /*width: 140px;*/
+  position: fixed;
   z-index: 9999;
 }
 
