--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -39,7 +39,7 @@
     <!-- IF PLAYER_OPTION_MENU_HIDE_SHOW_BUTTON == 0 -->
     #left_menu_show {
       position: fixed;
-      float: left;
+     /* float: left;*/
     }
     /*
     #left_menu {
