--- a/design/templates/OpenGame/blitz_register.tpl.html
+++ b/design/templates/OpenGame/blitz_register.tpl.html
@@ -4,6 +4,11 @@
 <table>
   <tr>
     <th class="c_l">{L_sys_player}</th>
+    <!-- IF REGISTRATION_DISCLOSURE_NAMES -->
+    <th class="c_l">
+      {L_sys_blitz_registration_player_blitz_name}
+    </th>
+    <!-- ENDIF -->
   </tr>
 
   <!-- BEGIN registrations -->
@@ -11,6 +16,11 @@
     <td class="c_l">
       {registrations.NAME}
     </td>
+    <!-- IF REGISTRATION_DISCLOSURE_NAMES -->
+    <td class="c_l">
+      {registrations.BLITZ_NAME}
+    </td>
+    <!-- ENDIF -->
   </tr>
   <!-- BEGINELSE -->
   <tr>
