BLITZ-feat-39b12.1: Added import result code

--- a/design/templates/OpenGame/blitz_register.tpl.html
+++ b/design/templates/OpenGame/blitz_register.tpl.html
@@ -80,7 +80,7 @@
   {Результат раунда}
   <form action="" method="post">
     <textarea rows="" cols="" name="blitz_result_string">{BLITZ_RESULT}</textarea>
-    <!--<input type="submit" name="import_result" value="{Импортировать результаты}" />-->
+    <input type="submit" name="import_result" value="{Импортировать результаты}" />
   </form>
 <!-- ENDIF -->
 
