BLITZ-feat-39b12.3: Prize calculation code

--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -575,3 +575,7 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
   top: 0;
 }
 */
+
+.blitz_admin > div {
+  margin-top: 20px;
+}
