--- a/design/templates/OpenGame/stat_statistics.tpl.html
+++ b/design/templates/OpenGame/stat_statistics.tpl.html
@@ -15,7 +15,7 @@
 <table width="519">
   <tr>
     <th class="c_c" colspan="{$HEADER_COLSPAN}">
-      <form name="stat_form" method="post">
+      <form name="stat_form" method="get">
         {L_stat_show}
         <select name="type" onChange="document.stat_form.submit()">
           <!-- BEGIN type -->
