BLITZ-feat-39b12.4: Now Blitz statistics can be imported on live server and viewed there

--- a/design/templates/OpenGame/blitz_register.tpl.html
+++ b/design/templates/OpenGame/blitz_register.tpl.html
@@ -69,6 +69,7 @@
       <a href="http://blitz.supernova.ws/" class="link">{L_sys_blitz_registration_server_link} http://blitz.supernova.ws/</a>
     </h2>
   <!-- ENDIF -->
+  <h2><a href="stat.php?source=blitz" class="link">{L_sys_blitz_registration_view_stat}</a></h2>
 <!-- ENDIF -->
 
 
