--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -1,202 +1,210 @@
 <!-- NAVBAR START -->
 
-<!-- <tr><td class="c_c" valign="top"><div id="sn_navbar" class="c_c" style="margin:0 auto"> -->
-  <table cellpadding="3" cellspacing="0" class="header c_c" id="resources"><tbody>
-    <tr>
-      <td class="c_l noborder">
-        <table cellspacing="0" cellpadding="0" class="header c_c" width="100%">
-          <tr>
-            <th class="c_l noborder">
-              <select size="1" onchange="changePlanet(this);">
-                <!-- BEGIN topnav_planets -->
-                  <option{topnav_planets.SELECTED} value="{topnav_planets.ID}">{topnav_planets.NAME}&nbsp;{topnav_planets.COORDS}
-                <!-- END topnav_planets -->
-              </select>
-            </th>
+<!-- IF GAME_BLITZ_REGISTER && ! GAME_BLITZ -->
+<!--<div class="c_c"><input type="button" value="{L_sys_blitz_global_button}" onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}blitz_register.php');"/></div>-->
+<!-- ENDIF -->
 
-            <th class="c_r noborder">
-              <span style="margin-left: 20px" >{L_top_online}&nbsp;[{USERS_ONLINE}/{USERS_TOTAL}]</span>
-            </th>
-          </tr>
-        </table>
-      </td>
-    </tr>
+<table cellpadding="3" cellspacing="0" class="header c_c" id="resources"><tbody>
+  <tr>
+    <td class="c_r markup">
+      <input type="button" value="{L_sys_blitz_global_button}" onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}blitz_register.php');"
+              style="margin: 5px 0;"/>
+    </td>
+  </tr>
+  <tr>
+    <td class="c_l noborder">
+      <table cellspacing="0" cellpadding="0" class="header c_c" width="100%">
+        <tr>
+          <th class="c_l noborder">
+            <select size="1" onchange="changePlanet(this);">
+              <!-- BEGIN topnav_planets -->
+                <option{topnav_planets.SELECTED} value="{topnav_planets.ID}">{topnav_planets.NAME}&nbsp;{topnav_planets.COORDS}
+              <!-- END topnav_planets -->
+            </select>
+          </th>
 
-    <tr>
-      <td class="c_l noborder">
-        <table cellspacing="0" cellpadding="0" class="header c_c noborder" width="100%">
-          <tr>
-            <th class="c_r">
-              {L_time_local}:
-            </th>
-            <th class="c_l">
-              <span id="top_time">{TIME_TEXT_LOCAL}</span>
-            </th>
-          </tr>
-          <tr>
-            <th class="c_r">
-              {L_time_server}:
-            </th>
-            <th class="c_l">
-              <span id="top_time_server">{TIME_TEXT}</span>
-            </th>
-          </tr>
-        </table>
-      </td>
-    </tr>
+          <th class="c_r noborder">
+            <span style="margin-left: 20px" >{L_top_online}&nbsp;[{USERS_ONLINE}/{USERS_TOTAL}]</span>
+          </th>
+        </tr>
+      </table>
+    </td>
+  </tr>
 
-    <tr>
-      <td class="c_l noborder">
-        <table width="100%" cellspacing="0" cellpadding="0"><tr>
-          <!-- BOF Nav Bar Left block -->
-          <td class="c_l noborder">
+  <tr>
+    <td class="c_l noborder">
+      <table cellspacing="0" cellpadding="0" class="header c_c noborder" width="100%">
+        <tr>
+          <th class="c_r">
+            {L_time_local}:
+          </th>
+          <th class="c_l">
+            <span id="top_time">{TIME_TEXT_LOCAL}</span>
+          </th>
+        </tr>
+        <tr>
+          <th class="c_r">
+            {L_time_server}:
+          </th>
+          <th class="c_l">
+            <span id="top_time_server">{TIME_TEXT}</span>
+          </th>
+        </tr>
+      </table>
+    </td>
+  </tr>
 
-            <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
-            <!-- INCLUDE eco_queue -->
-            <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;" class="c_c">
-              <a href="buildings.php?mode=research">
-                <img style="position: absolute; left: 0; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_128x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
-                <!-- IF $QUE_NOT_EMPTY -->
-                <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
-                  <div id="topnav_{QUE_ID}"></div>
-                  <div id="topnav_{QUE_ID}_timer" style="color: lime"></div>
-                  <div>{L_sys_total_time}</div>
-                  <div id="topnav_{QUE_ID}_total" style="color: red"></div>
-                  <div style="display: none;" id="topnav_{QUE_ID}_que"></div>
-                </span>
-                <!-- ELSE -->
-                <span style="width: 100%; position: absolute; left: 0; top: 40%;" class="alpha50">
-                  {L_eco_que_empty}
-                </span>
-                <!-- ENDIF -->
-              </a>
-            </div>
+  <tr>
+    <td class="c_l noborder">
+      <table width="100%" cellspacing="0" cellpadding="0"><tr>
+        <!-- BOF Nav Bar Left block -->
+        <td class="c_l noborder">
 
-          </td>
-          <!-- EOF Nav Bar Left block -->
-
-          <!-- BOF Nav Bar Middle block -->
-          <td class="c_c noborder">
-
-            <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
-              <a href="fleet.php">
-                <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_expedition_64x64.png" height="100%" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
-                <span style="position: absolute; right: 0; bottom: 0;" id="topnav_expedition_counter_total" class="icon_alpha">
-                  <span id='topnav_expedition_counter'>{TOPNAV_EXPEDITIONS_FLYING}</span>/{TOPNAV_EXPEDITIONS_TOTAL}
-                </span>
-              </a>
-            </div>
-
-            <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
-              <a href="flying_fleets.php">
-                <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_fleet_own_64x64.png" height="100%" alt="{L_sys_fleets}" title="{L_sys_fleets}">
-                <span style="position: absolute; right: 0; bottom: 0;" id="topnav_fleet_counter_total" class="icon_alpha">
-                  <span id='topnav_fleet_counter'>{TOPNAV_FLEETS_FLYING}</span>/{TOPNAV_FLEETS_TOTAL}
-                </span>
-              </a>
-            </div>
-
-            <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
-              <a href="quest.php">
-                <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_quest_64x64.png" height="100%" alt="{L_qst_quests}" title="{L_qst_quests}">
-                <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha">
-                  {TOPNAV_QUEST_COMPLETE}/{C_quest_total}
-                </span>
-              </a>
-            </div>
-
-            <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
-              <a href="messages.php">
-                <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_mail_64x64.png" width="100%" alt="{L_Message}" title="{L_Message}">
-                <div style="position: absolute; left: 0px; bottom: 0px; width: 100%; text-align: center;" class="">
-                  <!-- IF TOPNAV_MESSAGES_ALL --><blink>[&nbsp;{TOPNAV_MESSAGES_ALL}&nbsp;]</blink><!-- ELSE -->0<!-- ENDIF -->
-                </div>
-              </a>
-              <!-- IF TOPNAV_MESSAGES_ADMIN -->
-              <a href="messages.php?mode=show&message_class={D_MSG_TYPE_ADMIN}">
-                <span style="width: 100%; position: absolute; right: 0; top: 0;" class=""><span class="msg_admin">[&nbsp;{TOPNAV_MESSAGES_ADMIN}&nbsp;]</span></span>
-              </a>
+          <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
+          <!-- INCLUDE eco_queue -->
+          <div style="display: inline-block; position: relative; width: 128px; height: 64px; margin-right: 3px;" class="c_c">
+            <a href="buildings.php?mode=research">
+              <img style="position: absolute; left: 0; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_128x64.png" height="100%" alt="{L_Research}" title="{L_Research}">
+              <!-- IF $QUE_NOT_EMPTY -->
+              <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
+                <div id="topnav_{QUE_ID}"></div>
+                <div id="topnav_{QUE_ID}_timer" style="color: lime"></div>
+                <div>{L_sys_total_time}</div>
+                <div id="topnav_{QUE_ID}_total" style="color: red"></div>
+                <div style="display: none;" id="topnav_{QUE_ID}_que"></div>
+              </span>
+              <!-- ELSE -->
+              <span style="width: 100%; position: absolute; left: 0; top: 40%;" class="alpha50">
+                {L_eco_que_empty}
+              </span>
               <!-- ENDIF -->
-              <!-- IF TOPNAV_MESSAGES_PLAYER -->
-              <a href="messages.php?mode=show&message_class={D_MSG_TYPE_PLAYER}">
-                <span style="width: 100%; position: absolute; right: 0; top: 1.2em;" class=""><span class="mnl_joueur">[&nbsp;{TOPNAV_MESSAGES_PLAYER}&nbsp;]</span></span>
-              </a>
-              <!-- ENDIF -->
-              <!-- IF TOPNAV_MESSAGES_ALLIANCE && ! TOPNAV_ALLY -->
-              <a href="messages.php?mode=show&message_class={D_MSG_TYPE_ALLIANCE}">
-                <span style="width: 100%; position: absolute; right: 0; top: 2.4em;" class=""><span class="mnl_alliance">[&nbsp;{TOPNAV_MESSAGES_ALLIANCE}&nbsp;]</span></span>
-              </a>
-              <!-- ENDIF -->
-            </div>
+            </a>
+          </div>
 
-          </td>
-          <!-- EOF Nav Bar Middle block -->
+        </td>
+        <!-- EOF Nav Bar Left block -->
 
-          <!-- BOF Nav Bar Right block -->
-          <td class="c_r noborder">
+        <!-- BOF Nav Bar Middle block -->
+        <td class="c_c noborder">
 
-            <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
-              <a href="dark_matter.php">
-                <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_dark_matterie_64x64.png" height="100%" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
-                <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_DARK_MATTER_TEXT}</span>
-              </a>
-            </div>
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="fleet.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_expedition_64x64.png" height="100%" alt="{L_sys_expeditions}" title="{L_sys_expeditions}">
+              <span style="position: absolute; right: 0; bottom: 0;" id="topnav_expedition_counter_total" class="icon_alpha">
+                <span id='topnav_expedition_counter'>{TOPNAV_EXPEDITIONS_FLYING}</span>/{TOPNAV_EXPEDITIONS_TOTAL}
+              </span>
+            </a>
+          </div>
 
-            <!-- IF TOPNAV_PAYMENT -->
-            <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
-              <a href="metamatter.php">
-                <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_metamatter_64x64.png" height="100%" alt="{L_sys_metamatte}" title="{L_sys_metamatter}">
-                <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_METAMATTER_TEXT}</span>
-              </a>
-            </div>
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="flying_fleets.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_fleet_own_64x64.png" height="100%" alt="{L_sys_fleets}" title="{L_sys_fleets}">
+              <span style="position: absolute; right: 0; bottom: 0;" id="topnav_fleet_counter_total" class="icon_alpha">
+                <span id='topnav_fleet_counter'>{TOPNAV_FLEETS_FLYING}</span>/{TOPNAV_FLEETS_TOTAL}
+              </span>
+            </a>
+          </div>
+
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="quest.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_quest_64x64.png" height="100%" alt="{L_qst_quests}" title="{L_qst_quests}">
+              <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha">
+                {TOPNAV_QUEST_COMPLETE}/{C_quest_total}
+              </span>
+            </a>
+          </div>
+
+          <div style="display: inline-block; position: relative; margin-right: 3px; width: 64px; height: 64px;">
+            <a href="messages.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_mail_64x64.png" width="100%" alt="{L_Message}" title="{L_Message}">
+              <div style="position: absolute; left: 0px; bottom: 0px; width: 100%; text-align: center;" class="">
+                <!-- IF TOPNAV_MESSAGES_ALL --><blink>[&nbsp;{TOPNAV_MESSAGES_ALL}&nbsp;]</blink><!-- ELSE -->0<!-- ENDIF -->
+              </div>
+            </a>
+            <!-- IF TOPNAV_MESSAGES_ADMIN -->
+            <a href="messages.php?mode=show&message_class={D_MSG_TYPE_ADMIN}">
+              <span style="width: 100%; position: absolute; right: 0; top: 0;" class=""><span class="msg_admin">[&nbsp;{TOPNAV_MESSAGES_ADMIN}&nbsp;]</span></span>
+            </a>
             <!-- ENDIF -->
+            <!-- IF TOPNAV_MESSAGES_PLAYER -->
+            <a href="messages.php?mode=show&message_class={D_MSG_TYPE_PLAYER}">
+              <span style="width: 100%; position: absolute; right: 0; top: 1.2em;" class=""><span class="mnl_joueur">[&nbsp;{TOPNAV_MESSAGES_PLAYER}&nbsp;]</span></span>
+            </a>
+            <!-- ENDIF -->
+            <!-- IF TOPNAV_MESSAGES_ALLIANCE && ! TOPNAV_ALLY -->
+            <a href="messages.php?mode=show&message_class={D_MSG_TYPE_ALLIANCE}">
+              <span style="width: 100%; position: absolute; right: 0; top: 2.4em;" class=""><span class="mnl_alliance">[&nbsp;{TOPNAV_MESSAGES_ALLIANCE}&nbsp;]</span></span>
+            </a>
+            <!-- ENDIF -->
+          </div>
 
-          </td>
-          <!-- EOF Nav Bar Right block -->
-        </tr></table>
-      </td>
-    </tr>
-  </tbody></table>
+        </td>
+        <!-- EOF Nav Bar Middle block -->
 
-  <!-- IF SN_RENDER_NAVBAR_PLANET -->
-  <table align="center">
-    <!-- INCLUDE planet_resources -->
-  </table>
-  <!-- ENDIF -->
-  <div align="center" style="display: none;" id="navbar_refresh"><span class="link_action" onclick="document.location.reload(true);">{L_topnav_refresh_page}</span></div>
-  <script type="text/javascript"><!--
-    if(sn_inframe) $('#navbar_refresh').css('display', 'block');
-  // --></script>
+        <!-- BOF Nav Bar Right block -->
+        <td class="c_r noborder">
 
-  <!-- IF .announces && GAME_NEWS_OVERVIEW -->
-  <table width=519 id="fresh_news_table" align="center">
-      <tr>
-      <th colspan=2 class="c_c">
-        {L_news_fresh}
-        <img class="fr pointer" onclick="jQuery.post('announce.php?only_hide_news=1');jQuery('#fresh_news_table').css('display', 'none');" src="design/images/r1.png" alt="{L_sys_close}" title="{L_sys_close}" />
-      </th>
-    </tr>
-    <!-- INCLUDE news_list -->
+          <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
+            <a href="dark_matter.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_dark_matterie_64x64.png" height="100%" alt="{L_sys_dark_matter}" title="{L_sys_dark_matter}">
+              <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_DARK_MATTER_TEXT}</span>
+            </a>
+          </div>
+
+          <!-- IF TOPNAV_PAYMENT -->
+          <div style="position: relative; width: 64px; height: 64px; margin-right: 3px; display: inline-block;">
+            <a href="metamatter.php">
+              <img style="position: absolute; left: 0px; top: 0px;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_metamatter_64x64.png" height="100%" alt="{L_sys_metamatte}" title="{L_sys_metamatter}">
+              <span style="position: absolute; right: 0; bottom: 0;" class="icon_alpha ok">{TOPNAV_METAMATTER_TEXT}</span>
+            </a>
+          </div>
+          <!-- ENDIF -->
+
+        </td>
+        <!-- EOF Nav Bar Right block -->
+      </tr></table>
+    </td>
+  </tr>
+</tbody></table>
+
+<!-- IF SN_RENDER_NAVBAR_PLANET -->
+<table align="center">
+  <!-- INCLUDE planet_resources -->
+</table>
+<!-- ENDIF -->
+<div align="center" style="display: none;" id="navbar_refresh"><span class="link_action" onclick="document.location.reload(true);">{L_topnav_refresh_page}</span></div>
+<script type="text/javascript"><!--
+  if(sn_inframe) $('#navbar_refresh').css('display', 'block');
+// --></script>
+
+<!-- IF .announces && GAME_NEWS_OVERVIEW -->
+<table width=519 id="fresh_news_table" align="center">
     <tr>
-      <th colspan=2 class="c_c">
-        <a class="link" href="announce.php">{L_news_all}</a>
-      </th>
-    </tr>
-  </table>
-  <!-- ENDIF -->
+    <th colspan=2 class="c_c">
+      {L_news_fresh}
+      <img class="fr pointer" onclick="jQuery.post('announce.php?only_hide_news=1');jQuery('#fresh_news_table').css('display', 'none');" src="design/images/r1.png" alt="{L_sys_close}" title="{L_sys_close}" />
+    </th>
+  </tr>
+  <!-- INCLUDE news_list -->
+  <tr>
+    <th colspan=2 class="c_c">
+      <a class="link" href="announce.php">{L_news_all}</a>
+    </th>
+  </tr>
+</table>
+<!-- ENDIF -->
 
-  <!-- IF .note -->
-  <table width=519 id="note_table" align="center">
-      <tr>
-      <th colspan=2 class="c_c">
-        <a class="link" href="notes.php">{L_sys_notes}</a>
-        <!--<img class="fr pointer" onclick="jQuery.post('announce.php?only_hide_news=1');jQuery('#fresh_news_table').css('display', 'none');" src="design/images/r1.png" alt="{L_sys_close}" title="{L_sys_close}" />-->
-      </th>
-    </tr>
-    <!-- INCLUDE note_list -->
-  </table>
-  <!-- ENDIF -->
-<!-- </div></td></tr> -->
+<!-- IF .note -->
+<table width=519 id="note_table" align="center">
+    <tr>
+    <th colspan=2 class="c_c">
+      <a class="link" href="notes.php">{L_sys_notes}</a>
+      <!--<img class="fr pointer" onclick="jQuery.post('announce.php?only_hide_news=1');jQuery('#fresh_news_table').css('display', 'none');" src="design/images/r1.png" alt="{L_sys_close}" title="{L_sys_close}" />-->
+    </th>
+  </tr>
+  <!-- INCLUDE note_list -->
+</table>
+<!-- ENDIF -->
 
 <script type="text/javascript"><!--
   function changePlanet(obj) {
