BLITZ-fix-39b12.7: Fixed error show Blitz button when no registration is open

--- a/design/templates/OpenGame/menu.tpl.html
+++ b/design/templates/OpenGame/menu.tpl.html
@@ -73,7 +73,7 @@
 
   <!--<input type="button" id="left_menu_show" value="{$MENU_START_BUTTON_SHOW}" />-->
 <!-- ENDIF -->
-  <table cellspacing="0" cellpadding="0" id="left_menu" class="c_l"><!-- BEGIN menu -->
+  <table cellspacing="0" cellpadding="0" id="left_menu"><!-- BEGIN menu -->
     <!-- IF menu.LEVEL == 'header' -->
       <!-- DEFINE $TX = 'th' -->
     <!-- ELSE -->
