--- a/design/templates/OpenGame/_template.css
+++ b/design/templates/OpenGame/_template.css
@@ -141,7 +141,7 @@ tr[prod_mode] > :not(:first-child) > span:not([style]) { /* Content of empire ce
 
 /* Menu ------------------------------------------------------------------------- */
 #left_menu {
-  margin-right: 10px;
+  margin: 5px 10px 0 5px;
   text-align: left;
   z-index: 999;
 }
