--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -5,12 +5,14 @@
 <!-- ENDIF -->
 
 <table cellpadding="3" cellspacing="0" class="header c_c" id="resources"><tbody>
+  <!-- IF GAME_BLITZ_REGISTER && ! GAME_BLITZ -->
   <tr>
     <td class="c_r markup">
       <input type="button" value="{L_sys_blitz_global_button}" onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}blitz_register.php');"
               style="margin: 5px 0;"/>
     </td>
   </tr>
+  <!-- ENDIF -->
   <tr>
     <td class="c_l noborder">
       <table cellspacing="0" cellpadding="0" class="header c_c" width="100%">
